syntax = "proto3";
option optimize_for = SPEED;
package pb;

message peer {
    string ip = 1;
    uint32 port = 2;
    uint32 rpcPort = 3;
    map<string, string> details = 4;
}