syntax = "proto3";
option optimize_for = SPEED;
package pb;
import "models.proto";

// The greeting service definition.
service rpc {
  rpc RPCGetService (getServiceRequest) returns (getServiceResponse) {}
}

message getServiceRequest {
    peer me = 1;
    string hash = 2;
}

message getServiceResponse {
    peer result = 1;
    repeated peer peers = 2;
}